apps/base/opengym/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opengym
  labels:
    goldilocks.fairwinds.com/enabled: "true"
