apps/base/opengym/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: opengym-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: opengym-web-svc
spec:
  selector:
    app: opengym-web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengym-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "opengym.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengym-web-svc
                port:
                  name: http
  tls:
    - hosts:
        - "opengym.dimarco-server.site"
      secretName: opengym-tls
